--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -10,7 +10,7 @@
       Name
     </label>
 
-    <input type="text" id="name_box" name="query_name">
+    <input type="text" id="name_box" name="the_department">
   </div>
 
   <button>
@@ -34,22 +34,22 @@
     </th>
   </tr>
 
-  <% @departments.each do |department| %>
+  <% @list_of_departments.each do |department| %>
     <tr>
       <td>
-        <%= @department.id %>
+        <%= department.id %>
       </td>
 
       <td>
-        <%= @department.name %>
+        <%= department.name %>
       </td>
 
-      <td>
-        <a href="/departments/<%= @department.id %>">
-          Show details
-        </a>
-      </td>
-    </tr>
+    <td>
+      <a href="/departments/<%= department.id %>">
+        Show details
+      </a>
+    </td>
+  </tr>
   <% end %>
 </table>
 
